[tool.poetry]
name = "random-password-generator"
version = "2.1.0"
description = "Simple and custom random password generator for python"
authors = ["Surya Teja <94suryateja@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
gunicorn = "^20.0.4"
webargs = "^6.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
